manual input is not working correctly

--- a/SchedulingProblem/SchedulingProblem/Views/DataReader/DataReaderConfig.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/DataReader/DataReaderConfig.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SchedulingProblem.Models.ConfigurationViewModel
 @{
-    ViewData["Title"] = "Determined Problem";
+    ViewData["Title"] = "DataReaderConfig";
 }
 
 
