--- a/SchedulingProblem/SchedulingProblem/Views/Determined/RandomInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Determined/RandomInput.cshtml
@@ -33,6 +33,8 @@
             <br />
             <br />
 
+            @Html.HiddenFor(m => m.NumberOfPenalties);
+
             <input type="submit" asp-route-myMethod="Update" value="Update" />
             <br />
         }
@@ -41,13 +43,9 @@
     <div style="width:50%;padding: 50px; float: right; display: inline-block; height: 600px;background-color: #E5E4E2;border-radius: 10px;">
         <h3>Random Output</h3>
         <br />
-        <div>
-            <span>-Id--------</span>
-            <span>--------Deadline--------</span>
-            <span>--------Penalty--------</span>
-        </div>
+       
         <div style="overflow-y:scroll; overflow-x:hidden; height:440px; ">
-            @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.Schedule)
+            @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.Schedule[0])
         </div>
 
     </div>
@@ -90,26 +88,18 @@
             <h3>Algorithm 1</h3>
             <p>Упорядкувати роботи по незростанню штрафів</p>
             <br />
-            <div>
-                <span>-Id----------</span>
-                <span>----------Deadline----------</span>
-                <span>----------Penalty----------</span>
-            </div>
+           
             <div style="overflow-y:scroll; overflow-x:hidden; height:440px; ">
-                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo1(Model.Schedule))
+                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo1(Model.Schedule[0]))
             </div>
         </div>
         <div class="col-sm">
             <h3>Algorithm 2</h3>
             <p>Упорядкувати роботи по неспаданню директивних строків</p>
             <br />
-            <div>
-                <span>-Id----------</span>
-                <span>----------Deadline----------</span>
-                <span>----------Penalty----------</span>
-            </div>
+           
             <div style="overflow-y:scroll; overflow-x:hidden; height:440px; ">
-                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo2(Model.Schedule))
+                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo2(Model.Schedule[0]))
             </div>
         </div>
     </div>
@@ -120,26 +110,18 @@
             <h3>Algorithm 3</h3>
             <p>Упорядкувати роботи по принципу: спочатку обираємо ті роботи, директивний строк яких на наступному кроці завершується, інакше упорядковуємо роботи по незростанню штрафів</p>
             <br />
-            <div>
-                <span>-Id----------</span>
-                <span>----------Deadline----------</span>
-                <span>----------Penalty----------</span>
-            </div>
+           
             <div style="overflow-y:scroll; overflow-x:hidden; height:440px; ">
-                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo3(Model.Schedule))
+                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo3(Model.Schedule[0]))
             </div>
         </div>
         <div class="col-sm">
             <h3>Algorithm 4</h3>
             <p>Упорядкувати роботи по незростанню відношень штрафів до дедлайнів</p>
             <br />
-            <div>
-                <span>-Id----------</span>
-                <span>----------Deadline----------</span>
-                <span>----------Penalty----------</span>
-            </div>
+           
             <div style="overflow-y:scroll; overflow-x:hidden; height:440px; ">
-                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo4(Model.Schedule))
+                @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo4(Model.Schedule[0]))
             </div>
         </div>
 
