--- a/SchedulingProblem/SchedulingProblem/Views/Shared/_Layout.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Determined" asp-action="Determined">Determined</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Determined" asp-action="DataReaderConfig">Determined</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Determined" asp-action="Undetermined">Undetermined</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Undetermined" asp-action="DataReaderConfig">Undetermined</a>
                         </li>
                     </ul>
                 </div>
