--- a/SchedulingProblem/SchedulingProblem/Views/Determined/RandomInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Determined/RandomInput.cshtml
@@ -128,7 +128,31 @@
     </div>
 </div>
 
+<div class="container">
+    <br />
+    <br />
+    <hr />
+    <h2 style="padding:10px;text-align:center">Best Schedules</h2>
+    <hr />
+    <br />
+
+    <div class="row">
+        <div class="col-sm">
+            <br />
+            <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
+                @if (Model.Schedule[0].operations.Count != 0)
+                {
+                    <div>
+                        @await Html.PartialAsync("~/Views/Determined/Answer.cshtml", Model.AlgoGenerator.BestSchedulesDetermined(Model.Schedule[0]))
+                    </div>
+                }
 
 
+                <br />
 
+            </div>
 
+        </div>
+
+    </div>
+</div>
