--- a/SchedulingProblem/SchedulingProblem/Views/Undetermined/FileInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Undetermined/FileInput.cshtml
@@ -29,6 +29,8 @@
 
             @for (int i = 0; i < Model.NumberOfPenalties; i++)
             {
+                <p>S @(i + 1)</p>
+                <br />
                 <div>@await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.Schedule[i]);</div>
                 <br />
             }
@@ -78,9 +80,11 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
-                    <div>
-                        @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo1(Model.Schedule[i]))
-                    </div>
+                <div>
+                    <p>S @(i + 1)</p>
+                    <br />
+                    @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo1(Model.Schedule[i]))
+                </div>
 
                     <br />
                 }
@@ -95,9 +99,11 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
-                    <div>
-                        @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo2(Model.Schedule[i]))
-                    </div>
+                <div>
+                    <p>S @(i + 1)</p>
+                    <br />
+                    @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo2(Model.Schedule[i]))
+                </div>
 
                     <br />
                 }
@@ -115,9 +121,11 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
-                    <div>
-                        @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo3(Model.Schedule[i]))
-                    </div>
+                <div>
+                    <p>S @(i + 1)</p>
+                    <br />
+                    @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo3(Model.Schedule[i]))
+                </div>
 
                     <br />
                 }
@@ -131,9 +139,11 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
-                    <div>
-                        @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo4(Model.Schedule[i]))
-                    </div>
+                <div>
+                    <p>S @(i + 1)</p>
+                    <br />
+                    @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo4(Model.Schedule[i]))
+                </div>
 
                     <br />
                 }
@@ -209,8 +219,6 @@
 
     </div>
 </div>
-
-
 <div class="container">
     <br />
     <br />
@@ -225,62 +233,24 @@
             <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
                 @for (int i = 0; i < Model.NumberOfPenalties + 1; i++)
                 {
-                    <div>
-                        @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.BestSchedules(Model.Schedule)[i])
-                    </div>
-
-                    <br />
-                }
-            </div>
-
-        </div>
-
-    </div>
-</div>
-
-<div class="container">
-    <br />
-    <br />
-    <hr />
-    <h2 style="padding:10px;text-align:center">Result</h2>
-    <hr />
-    <br />
-
-    <div class="row">
-        <div class="col-sm">
-            <br />
-            <h3>Deltas</h3>
-            <p>Рядки - розклади, стовпці - критерії (штрафи), останній стовпець - сума дельт по рядку.</p>
-            <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
-
-
                 <div>
-                    @if (Model.NumberOfPenalties > 0)
-                    {
-                        @await Html.PartialAsync("~/Views/Undetermined/DeltaView.cshtml", Model.AlgoGenerator.Deltas(Model.AlgoGenerator.BestSchedules(Model.Schedule)))
-                    }
+                    <p>S @(i + 1)</p>
+                    <br />
+                    @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.BestSchedules(Model.Schedule)[i])
                 </div>
 
-                <br />
-
-            </div>
-
-        </div>
-
-        @*<div class="col-sm">
-            <br />
-            <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
-
-                @for (int i = 0; i < Model.NumberOfPenalties; i++)
-                {
-                    <div>@await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.Schedule[i]);</div>
                     <br />
                 }
             </div>
 
-            <br />
-        </div>*@
+        </div>
 
     </div>
-       
 </div>
+<br />
+<div>
+    @await Html.PartialAsync("~/Views/Undetermined/Answer.cshtml", Model.AlgoGenerator.Answer(Model.Schedule))
+</div>
+
+<br />
+
