--- a/SchedulingProblem/SchedulingProblem/Views/Undetermined/ManualInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Undetermined/ManualInput.cshtml
@@ -33,6 +33,8 @@
 
             @for (int i = 0; i < Model.NumberOfPenalties; i++)
             {
+                <p>S @(i + 1)</p>
+                <br />
                 <div>@await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.Schedule[i]);</div>
                 <br />
             }
@@ -82,6 +84,8 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
+                    <p>S @(i + 1)</p>
+                    <br />
                     <div>
                         @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo1(Model.Schedule[i]))
                     </div>
@@ -98,6 +102,8 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
+                    <p>S @(i + 1)</p>
+                    <br />
                     <div>
                         @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo2(Model.Schedule[i]))
                     </div>
@@ -118,6 +124,8 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
+                    <p>S @(i + 1)</p>
+                    <br />
                     <div>
                         @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo3(Model.Schedule[i]))
                     </div>
@@ -134,6 +142,8 @@
 
                 @for (int i = 0; i < Model.NumberOfPenalties; i++)
                 {
+                    <p>S @(i + 1)</p>
+                    <br />
                     <div>
                         @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.MakeAlgo4(Model.Schedule[i]))
                     </div>
@@ -216,6 +226,8 @@
             <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
                 @for (int i = 0; i < Model.NumberOfPenalties + 1; i++)
                 {
+                    <p>S @(i + 1)</p>
+                    <br />
                     <div>
                         @await Html.PartialAsync("~/Views/AlgoOutputs/ScheduleOutput.cshtml", Model.AlgoGenerator.BestSchedules(Model.Schedule)[i])
                     </div>
@@ -231,39 +243,11 @@
 
 
 
-<div class="container">
-    <br />
-    <br />
-    <hr />
-    <h2 style="padding:10px;text-align:center">Result</h2>
-    <hr />
-    <br />
 
-    <div class="row">
-        <div class="col-sm">
-            <br />
-            <h3>Deltas</h3>
-            <p>Рядки - розклади. стовпці - критерії (останній стовпець сумарне значення дельти по розкладу).</p>
-            <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
-
-
-                <div>
-                    @await Html.PartialAsync("~/Views/Undetermined/DeltaView.cshtml", Model.AlgoGenerator.Deltas(Model.AlgoGenerator.BestSchedules(Model.Schedule)))
-                </div>
-
-                <br />
-
-            </div>
-
-        </div>
-        @*<div class="col-sm">
-            <br />
-                    <div>
-                        @await Html.PartialAsync("~/Views/Undetermined/Answer.cshtml", Model.AlgoGenerator.Answer(Model.AlgoGenerator.Deltas(Model.AlgoGenerator.BestSchedules(Model.Schedule)),Model.AlgoGenerator.BestSchedules(Model.Schedule)))
-                    </div>
-
-                    <br />
-        </div>*@
-
-    </div>
+<br />
+<div>
+    @await Html.PartialAsync("~/Views/Undetermined/Answer.cshtml", Model.AlgoGenerator.Answer(Model.Schedule))
 </div>
+
+<br />
+
