--- a/SchedulingProblem/SchedulingProblem/Views/Statistics/Statistics.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Statistics/Statistics.cshtml
@@ -3,23 +3,30 @@
     ViewData["Title"] = "Statistics";
 }
 
-<div style="margin:20px; color: ivory">
-    @await Html.PartialAsync("~/Views/Statistics/Precision.cshtml")
-</div>
-<div style="color:lightblue">
-    @await Html.PartialAsync("~/Views/Statistics/Time.cshtml")
-</div>
+@*<div style="margin:20px; color: ivory">
+        @await Html.PartialAsync("~/Views/Statistics/Precision.cshtml")
+    </div>
+    <div style="color:lightblue">
+        @await Html.PartialAsync("~/Views/Statistics/Time.cshtml")
+    </div>
+    <div style="color:lightcyan">
+        @await Html.PartialAsync("~/Views/Statistics/Time1.cshtml")
+    </div>
+    <div style="color:lightcyan">
+        @await Html.PartialAsync("~/Views/Statistics/Time2.cshtml")
+    </div>
+    <div style="color:lightcyan">
+        @await Html.PartialAsync("~/Views/Statistics/Time3.cshtml")
+    </div>
+    <div style="color:lightcyan">
+        @await Html.PartialAsync("~/Views/Statistics/Time4.cshtml")
+    </div>*@
+@*<div style="color:lightcyan">
+    @await Html.PartialAsync("~/Views/Statistics/Undetermined.cshtml")
+</div>*@
+@*<div style="color:lightcyan">
+    @await Html.PartialAsync("~/Views/Statistics/Undetermined2.cshtml")
+</div>*@
 <div style="color:lightcyan">
-    @await Html.PartialAsync("~/Views/Statistics/Time1.cshtml")
+    @await Html.PartialAsync("~/Views/Statistics/UndeterminedTime.cshtml")
 </div>
-<div style="color:lightcyan">
-    @await Html.PartialAsync("~/Views/Statistics/Time2.cshtml")
-</div>
-<div style="color:lightcyan">
-    @await Html.PartialAsync("~/Views/Statistics/Time3.cshtml")
-</div>
-<div style="color:lightcyan">
-    @await Html.PartialAsync("~/Views/Statistics/Time4.cshtml")
-</div>
-
-
