--- a/SchedulingProblem/SchedulingProblem/Views/Undetermined/ManualInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Undetermined/ManualInput.cshtml
@@ -13,7 +13,7 @@
         <h3>Manual Input</h3>
         <br />
 
-        Number of elements: @Model.NumberOfElements
+        Number of jobs: @Model.NumberOfElements
         @await Html.PartialAsync("~/Views/Undetermined/ScheduleInput.cshtml", Model.manualList);
 
 
@@ -216,7 +216,7 @@
     <br />
     <br />
     <hr />
-    <h2 style="padding:10px;text-align:center">Best Schedules</h2>
+    <h2 style="padding:10px;text-align:center">The Best Schedules</h2>
     <hr />
     <br />
 
