--- a/SchedulingProblem/SchedulingProblem/Views/Undetermined/RandomInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Undetermined/RandomInput.cshtml
@@ -11,7 +11,7 @@
 
         @using (Html.BeginForm())
         {
-            <h6>Input the number of elements</h6>
+            <h6>Input the number of jobs</h6>
             @Html.TextBoxFor(m => m.NumberOfElements)
             <br />
             <br />
@@ -32,7 +32,7 @@
             @Html.TextBoxFor(m => m.DeadlineTo)
             <br />
             <br />
-            <h6>Input the number of schedules</h6>
+            <h6>Input the number of penalty arrays</h6>
             @Html.TextBoxFor(m => m.NumberOfPenalties)
             <br />
             <br />
@@ -263,7 +263,7 @@
     <br />
     <br />
     <hr />
-    <h2 style="padding:10px;text-align:center">Best Schedules</h2>
+    <h2 style="padding:10px;text-align:center">The Best Schedules</h2>
     <hr />
     <br />
 
