--- a/SchedulingProblem/SchedulingProblem/Views/Determined/FileInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Determined/FileInput.cshtml
@@ -21,7 +21,7 @@
     </div>
 
     <div style="width:50%;padding: 50px; float: right; display: inline-block; height: 600px;background-color: #E5E4E2;border-radius: 10px;">
-        <h3>Random Output</h3>
+        <h3>File Output</h3>
         <br />
        
         <div style="overflow-y:scroll; overflow-x:hidden; height:440px; ">
@@ -112,14 +112,14 @@
     <br />
     <br />
     <hr />
-    <h2 style="padding:10px;text-align:center">Best Schedules</h2>
+    <h2 style="padding:10px;text-align:center">The Best Schedules</h2>
     <hr />
     <br />
 
     <div class="row">
         <div class="col-sm">
             <br />
-            <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
+           
                 @if (Model.Schedule[0].operations.Count != 0)
                 {
                     <div>
@@ -130,7 +130,7 @@
 
                 <br />
 
-            </div>
+            
 
         </div>
 
