--- a/SchedulingProblem/SchedulingProblem/Views/Determined/RandomInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Determined/RandomInput.cshtml
@@ -132,14 +132,14 @@
     <br />
     <br />
     <hr />
-    <h2 style="padding:10px;text-align:center">Best Schedules</h2>
+    <h2 style="padding:10px;text-align:center">The Best Schedules</h2>
     <hr />
     <br />
 
     <div class="row">
         <div class="col-sm">
             <br />
-            <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
+           
                 @if (Model.Schedule[0].operations.Count != 0)
                 {
                     <div>
@@ -150,7 +150,7 @@
 
                 <br />
 
-            </div>
+         
 
         </div>
 
