--- a/SchedulingProblem/SchedulingProblem/Views/Statistics/Time.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Statistics/Time.cshtml
@@ -28,25 +28,27 @@
 
     function PopulationChart2(data) {
         var dataArray = [
-            ['Step', 'Algo1', 'Algo2', 'Algo3', 'Algo4']
+            ['Step', 'Greedy1', 'Greedy2', 'Greedy3', 'Greedy4']
         ];
         $.each(data, function(i, item) {
-            dataArray.push([item.step, item.algo1, item.algo2, item.algo3, item.algo4]);
+            dataArray.push([item.step, item.greedy1, item.greedy2, item.greedy3, item.greedy4]);
         });
         var data = google.visualization.arrayToDataTable(dataArray);
         var options = {
-            title: 'Ratio of number of works to time of execution',
+            title: 'Ratio of number of jobs to time of execution',
             chartArea: {
                 width: '50%'
             },
             colors: ['#b0120a', '#7b1fa2', '#ffab91', '#d95f02'],
             hAxis: {
-                title: 'Number of works',
+                title: 'Number of jobs',
                 minValue: 0
             },
             vAxis: {
-                title: 'Time Execution (ms)'
-            }
+                title: 'Time of Execution (ms)',
+                viewWindow: {min: 0}
+            },
+            curveType: 'function'
         };
         var chart = new google.visualization.LineChart(document.getElementById('chart2_div'));
 
