--- a/SchedulingProblem/SchedulingProblem/Views/Statistics/Time4.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Statistics/Time4.cshtml
@@ -28,25 +28,27 @@
 
     function PopulationChart6(data) {
         var dataArray = [
-            ['Step', 'Algo4']
+            ['Step', 'Greedy4']
         ];
         $.each(data, function(i, item) {
-            dataArray.push([item.step, item.algo4]);
+            dataArray.push([item.step, item.greedy4]);
         });
         var data = google.visualization.arrayToDataTable(dataArray);
         var options = {
-            title: 'Ratio of number of works to time of execution',
+            title: 'Ratio of number of jobs to time of execution',
             chartArea: {
                 width: '50%'
             },
             colors: ['#d95f02'],
             hAxis: {
-                title: 'Number of works',
+                title: 'Number of jobs',
                 minValue: 0
             },
             vAxis: {
-                title: 'Time Execution (ms)'
-            }
+                title: 'Time of Execution (ms)',
+                 viewWindow: {min: 0}
+            },
+            curveType: 'function'
         };
         var chart = new google.visualization.LineChart(document.getElementById('chart6_div'));
 
