--- a/SchedulingProblem/SchedulingProblem/Views/Statistics/Undetermined2.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Statistics/Undetermined2.cshtml
@@ -1,6 +1,5 @@
 ﻿<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-
-<div id="chart1_div"></div>
+<div id="chart8_div"></div>
 <script type="text/javascript">
 
 
@@ -12,7 +11,7 @@
     function LoadData() {
         $.ajax({
 
-            url: '@Url.Action("Precision","Statistics")',
+            url: '@Url.Action("Undetermined2","Statistics")',
             dataType: "json",
             type: "GET",
             error: function(xhr, status, error) {
@@ -20,38 +19,38 @@
                 toastr.error(err.message);
             },
             success: function(data) {
-                PopulationChart(data);
+                PopulationChart8(data);
                 return false;
             }
         });
         return false;
     }
 
-    function PopulationChart(data) {
+    function PopulationChart8(data) {
         var dataArray = [
-            ['Step', 'Greedy1', 'Greedy2', 'Greedy3', 'Greedy4']
+            ['Step', 'Percents']
         ];
         $.each(data, function(i, item) {
-            dataArray.push([item.step, item.greedy1, item.greedy2, item.greedy3, item.greedy4]);
+            dataArray.push([item.step, item.percents]);
         });
         var data = google.visualization.arrayToDataTable(dataArray);
         var options = {
-            title: 'Ratio of number of jobs to total penalty',
+            title: 'Ratio',
             chartArea: {
                 width: '50%'
             },
-            colors: ['#b0120a', '#7b1fa2', '#ffab91', '#d95f02'],
+            colors: ['#d95f02'],
             hAxis: {
-                title: 'Number of jobs',
+                title: 'Number of penalty arrays',
                 minValue: 0
             },
             vAxis: {
-                title: 'Total Penalty',
-                viewWindow: {min: 0}
+                title: 'Percents',
+                 viewWindow: {min: 0}
             },
             curveType: 'function'
         };
-        var chart = new google.visualization.LineChart(document.getElementById('chart1_div'));
+        var chart = new google.visualization.LineChart(document.getElementById('chart8_div'));
 
         chart.draw(data, options);
         return false;
