--- a/SchedulingProblem/SchedulingProblem/Views/Undetermined/FileInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Undetermined/FileInput.cshtml
@@ -10,7 +10,7 @@
         <h3>File Input</h3>
         <br />
         <form method="post" enctype="multipart/form-data" asp-controller="Undetermined" asp-action="FileInput">
-            <span>Input the number of schedules</span>
+            <span>Input the number of penalty arrays</span>
             <input type="number" name="numOfPenalties" />
 
             <span>Select File:</span>
@@ -23,7 +23,7 @@
     </div>
 
     <div style="width:50%;padding: 50px; float: right; display: inline-block; height: 600px;background-color: #E5E4E2;border-radius: 10px;">
-        <h3>Random Output</h3>
+        <h3>File Output</h3>
         <br />
         <div style="overflow-y:auto; overflow-x:auto; height:440px;width:460px;display: flex;justify-content: space-between;">
 
@@ -223,7 +223,7 @@
     <br />
     <br />
     <hr />
-    <h2 style="padding:10px;text-align:center">Best Schedules</h2>
+    <h2 style="padding:10px;text-align:center">The Best Schedules</h2>
     <hr />
     <br />
 
