--- a/SchedulingProblem/SchedulingProblem/Views/Undetermined/NumInput.cshtml
+++ b/SchedulingProblem/SchedulingProblem/Views/Undetermined/NumInput.cshtml
@@ -2,9 +2,9 @@
 <h1>NumInput</h1>
 
 <form method="post" action="~/Undetermined/NumInput">
-    <label>Number of Elements:</label><br />
+    <label>Number of Jobs:</label><br />
     <input type="number" name="numOfElements" /><br />
-    <label>Number of Schedules:</label><br />
+    <label>Number of Penalty Arrays:</label><br />
     <input type="number" name="numOfPenalties" /><br />
     <input type="submit" value="Отправить" />
 </form>
